# nyado

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD.git  PKGBUILD.nyado  README.md  build.rs  flake.nix  install.sh  install_bin.sh  nyado_install.bat  nyado_uninstall.bat  update_repo.sh
.github/workflows/: aur.yml  release.yml
config/: lang_en.toml  lang_ja.toml  lang_ru.toml  lang_zh.toml
src/: app.rs  cli.rs  commands.rs  config.rs  i18n.rs  main.rs  popup.rs  storage.rs  todo.rs
src/handlers/: due_date.rs  filter.rs  help.rs  language.rs  mod.rs  navigation.rs  project.rs  task.rs
src/ui/: bongo.rs  common.rs  mod.rs  progress_bar.rs  right_panel.rs  search_box.rs  statusbar.rs  todo_list.rs  topbar.rs
