[package]
name = "nyado"
version = "0.4.0"
edition = "2024"
authors = ["InTeaReable <leyn.the.cat@gmail.com>"]
description = "A Rust todo-list manager with TUI, inspired by meowdo"
license = "MIT"
repository = "https://github.com/LeynTheCat/nyado"
readme = "README.md"
build = "build.rs"
include = ["src/**/*", "config/**/*", "README.md", "LICENSE", "build.rs"]
keywords = ["todo", "tui", "rust", "productivity", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
dirs = "5"
chrono = "0.4"
anyhow = "1"
unicode-width = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
single-instance = "0.3"
serde_yaml = "0.9"
csv = "1.3"
rand = "0.8"
serde_json = "1.0.150"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16
strip = true